--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,3 +1,5 @@
+$hexagon-index: 0.3;
+
 .margin-top--20{
     margin-top: -20px;
 }
@@ -77,14 +79,11 @@
     box-sizing: border-box;
     display: flex;
     justify-content: space-between;
-    // max-width: 960px;
-    // min-width: 430px;
     margin: auto;
     color: white;
     background-color: rgba(17, 17, 17, 0.527);
     padding: 20px;
-    //margin-top: -20px;
-    button{
+    button, locale-change{
         font-size: 20px;
     }
     .logo{
@@ -302,6 +301,7 @@
 .step-container{
     height: 400px;
     width: 300px;
+    cursor: pointer;
     // border: 1px solid #fff;
     // border-radius: 5px;
     // padding: 10px;
