--- a/src/app/test/test.component.html
+++ b/src/app/test/test.component.html
@@ -117,7 +117,7 @@
 <!-- //=========================leson 7 Делаем header и навигацию сайта================================== -->
 <!-- //=========================leson 8 верстка SideBar сайта================================== -->
 <!-- //=========================leson 9 Верстка адаптивного слайдера================================== -->
-<!-- <div class="header">
+<div class="header">
   <div class="header_section">
     <div class="header_item headerlogo">
       WDB
@@ -159,7 +159,7 @@
     </div>
   </div>
 
-  <div class="wrap">
+  <!-- <div class="wrap">
     <h1>Foto slider</h1>
     <div class="slider">
       <button onclick="prev()">&laquo;</button>
@@ -174,7 +174,7 @@
       </div>
       <button onclick="next()">&raquo;</button>
     </div>
-  </div>
+  </div> -->
   <div class="gallery">
     <div><img src="https://images.pexels.com/photos/459144/pexels-photo-459144.jpeg?w=1260&h=750&auto=compress&cs=tinysrgb" alt=""></div>
     <div><img src="https://images.pexels.com/photos/903475/pexels-photo-903475.jpeg?w=1260&h=750&auto=compress&cs=tinysrgb" alt=""></div>
@@ -182,7 +182,7 @@
     <div><img src="https://images.pexels.com/photos/692103/pexels-photo-692103.jpeg?w=1260&h=750&auto=compress&cs=tinysrgb" alt=""></div>
     <div><img src="https://images.pexels.com/photos/754587/pexels-photo-754587.jpeg?w=1260&h=750&auto=compress&cs=tinysrgb" alt=""></div>
   </div>
-</div> -->
+</div>
 
 <!-- =========================================== Code Dojo 1 ========================================== -->
 <!-- <div class="body">
