--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,10 +3,10 @@
     min-height: 100%;
     //background: #a2c7dd;
     background: url(../images/360302.png) repeat-y;
-    -moz-background-size: 100%; /* Firefox 3.6+ */
-    -webkit-background-size: 100%; /* Safari 3.1+ и Chrome 4.0+ */
-    -o-background-size: 100%; /* Opera 9.6+ */
-    background-size: 100%; /* Современные браузеры */
+    -moz-background-size: cover; /* Firefox 3.6+ */
+    -webkit-background-size: cover; /* Safari 3.1+ и Chrome 4.0+ */
+    -o-background-size: cover; /* Opera 9.6+ */
+    background-size: cover; /* Современные браузеры */
 }
 
 // .home-app{
