--- a/src/app/brickType/brick-type-center/brick-type-center.component.html
+++ b/src/app/brickType/brick-type-center/brick-type-center.component.html
@@ -1,27 +1,36 @@
-
 <div class="title-header my-card">
-    <div class="title-page-container">
-        ШАГ 2: Поставь свои цели
+    <div class="title-page-container" translate>
+        Step2.SetYourSkill
     </div>
-</div> 
+</div>
 
 <div class="brick-type-center">
-    
-  <mat-card class="">   
-      <div class="brick-type-details">
-          <brick-type-details [brickType]="selectedBrickType"  *ngIf="existentCategories"
-                                [categoriesList]="existentCategories"
-                                (createBrickTypeEvent)="onCreateBrickType($event)"
-                                (deleteBrickTypeEvent)="onDeleteBrickType($event)"
-                                (updateBrickTypeEvent)="onUpdateBrickType($event)"></brick-type-details>
-      </div> 
-  </mat-card>
 
-  <mat-card class="">   
-      <div class="brick-type-list">
-          <brick-type-list [brickTypes]="existentBrickTypes"
-                          (selectBrickTypeEvent)="onSelectBrickType($event)"></brick-type-list>
-      </div>
-  </mat-card>
+    <mat-card class="card-brick-type brick-type-details">
+        <div class="title-container" translate>
+            Step2.CreateYouSkill
+        </div>
+        <brick-type-details [brickType]="selectedBrickType" 
+                *ngIf="existentCategories" 
+                [categoriesList]="existentCategories" 
+                (createBrickTypeEvent)="onCreateBrickType($event)"
+                (deleteBrickTypeEvent)="onDeleteBrickType($event)" 
+                (updateBrickTypeEvent)="onUpdateBrickType($event)">
+        </brick-type-details>
+    </mat-card>
+
+    <mat-card class="card-brick-type brick-type-list">
+        <div class="title-container" translate>
+            Step2.YouSkillList
+        </div>
+        <brick-type-list [brickTypes]="existentBrickTypes" (selectBrickTypeEvent)="onSelectBrickType($event)"></brick-type-list>
+    </mat-card>
+
+    <mat-card class="card-brick-type brick-type-description">
+        <div class="title-container" translate>
+            Step2.SkillDescriptionTitle
+        </div>
+        <div translate>Step2.SkillDescription</div>
+    </mat-card>
 
 </div>
