--- a/src/app/brickType/brick-type-center/brick-type-center.component.scss
+++ b/src/app/brickType/brick-type-center/brick-type-center.component.scss
@@ -7,17 +7,69 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    mat-card{
+        margin: 5px;
+    }
 }
 
 .brick-type-center div{
     padding: 10px;
 }
 
-.brick-type-details{
+.card-brick-type{
     flex-grow: 1;
-    width: 300px;
+    width: 250px;
+    //min-width: 250px;
+    //width: 100%;
+}
+.brick-type-details{
+    //flex-grow: 1;
+    // min-width: 250px;
+    // width: 100%;
     //border: 1px solid black;
 }
 .brick-type-list{
-    width: 300px;
+    //width: 100%;
+}
+
+.brick-type-description{
+    //width: 100%;
+}
+
+@media screen and(max-width: 600px){
+    .brick-type-center{
+        //flex-direction: column;       
+    }
+    .card-brick-type{
+        //max-width: 100%;
+    }
+}
+
+@media screen and(max-width: 970px){
+    .brick-type-center{
+        //flex-direction: row-reverse;
+        flex-wrap: wrap;
+        
+    }
+    .brick-type-description{
+        order: 1;
+        width: 100%;
+    }
+    .brick-type-details, .brick-type-list{
+        order: 2;
+    }
+    // .brick-type-details{
+    //     order: 2;
+    //     //max-width: 50%;
+       
+    // }
+    // .brick-type-list{
+    //     order: 3;
+    //     //max-width:  50%;
+    // }
+    // .card-brick-type{
+    //     flex-grow: 1;
+    //     min-width: 300px;
+    //     //max-width: 450px;
+    // }
 }
