--- a/src/app/brickType/brick-type-list/brick-type-list.component.scss
+++ b/src/app/brickType/brick-type-list/brick-type-list.component.scss
@@ -9,7 +9,8 @@
     font-size: 14px;
     font-weight: bold;
     //text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
-    width: 70px;
+    width: 75px;
+    min-width: 40px;
     //border-radius: 4px;
     // cursor: pointer;
     // text-align: center;
