Changed style for Homve page

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -63,7 +63,7 @@
     
 
     <section class="section section-dark">
-
+        <h1>Как с нами работать?</h1>
         <div class="all-steps-container">
             <div class="step-container white-shadow" routerLink="/category">
                 <div class="step-header">ШАГ 1:</div>
@@ -100,12 +100,12 @@
                 </div>
                 <div class="center-to-right">
                     <span class="border">
-                        Распиши план
+                        Будь одержим
                     </span>
                 </div>
                 <div class="center-fix">
                     <span class="border">
-                        Будь одержим
+                        Распиши план
                     </span>
                 </div>
                 <div class="center-to-up">
