--- a/src/app/brickType/brick-type-details/brick-type-details.component.html
+++ b/src/app/brickType/brick-type-details/brick-type-details.component.html
@@ -31,6 +31,7 @@
     <div class="button-container">
       <button mat-raised-button color="primary" 
               [disabled]='brickTypeDetailsForm.invalid'
+              *ngIf="brickType && !brickType._id"
               (click)="createBrickType()">{{'Add' | translate}}</button>
       <button mat-raised-button color="primary" 
               *ngIf="brickType && brickType._id"
