--- a/src/styles.scss
+++ b/src/styles.scss
@@ -90,26 +90,31 @@ p{
 
 // ===================================  TITLE IN HEADED ========================
 h1{
-    font-size: 60px;
+    font-size: 50px;
     margin: 10px 0;
     font-weight: 700;
+    line-height: 50px;
 }
 h2{
     font-size: 36px;
     margin: 10px 0;
     font-weight: 700;
+    line-height: 36px;
 }
 h3{
     font-size: 24px;
     font-weight: 700;
+    line-height: 24px;
 }
 h4{
     font-size: 18px;
     font-weight: 700;
+    line-height: 18px;
 }
 h5 {
     font-size: 16px;
     font-weight: 700;
+    line-height: 16px;
 }
 .title-container{
     margin: 14px 0px;
