--- a/src/app/calendar/calendar.component.scss
+++ b/src/app/calendar/calendar.component.scss
@@ -5,7 +5,7 @@
     padding: 10px;
     display: flex;
     flex-direction: row;
-    justify-content: left;
+    justify-content: stretch;
     flex-wrap: wrap;
     color: white;
 }
@@ -13,7 +13,10 @@
 // rgba(63, 63, 63, 0.712);
 .one-day { 
     box-sizing: border-box;
-    width: 131px;
+    min-width: 51px;
+    //width: 91px;
+    max-width: 131px;
+    //flex-grow: 1;
     height: 120px;
     margin: 3px;
     // background: rgb(139, 139, 139);
@@ -22,10 +25,11 @@
     display: flex;
     flex-direction: row;
     align-items: stretch;
-    justify-content: stretch;
+    justify-content: flex-end;
     flex-wrap: wrap;
     border: 1px solid rgb(70, 70, 70);
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    flex-basis: 13.6%;
 }
 .one-day:hover{
     background: #0097a7;
@@ -43,12 +47,14 @@
 .bricks-container{
     width: 100%;
     max-height: 100px;
-    display: flex;
-    
-    flex-wrap: wrap;    
+    display: flex;    
+    flex-wrap: wrap; 
+
+    //justify-content: space-between;
+    overflow-y: overlay;   
 }
 .day-number{
-    width: 100%;
+    //width: 100%;
     display: flex;
     justify-content: flex-end;
     align-items: flex-end;
@@ -58,7 +64,7 @@
 }
 .brick-in-calendar {
     //z-index: 100;
-    margin: 5px 5px;
+    margin: 5px 4px;
     font-size: 14px;
     width: 33px;
     height: 20px;
@@ -126,5 +132,30 @@
         border-bottom-right-radius: 5px;
         border-top-left-radius: 0;
         border-bottom-left-radius: 0;
+    }
+}
+
+// ======================= MEDIA =====================
+@media screen and(max-width: 930px){
+    .one-day { 
+        flex-basis: 13.4%;
+    }
+}
+@media screen and(max-width: 730px){
+    .one-day { 
+        flex-basis: 13.2%;
+    }
+}
+@media screen and(max-width: 600px){
+    .one-day { 
+        flex-basis: 100%;
+        max-width: 100%;
+        height: 35px;
+    }
+    .week-nav{
+        display: none;
+    }
+    .day-number{
+        margin-top: -25px;
     }
 }
