Changed UI for small screen

--- a/src/app/calendar/calendar.component.scss
+++ b/src/app/calendar/calendar.component.scss
@@ -49,10 +49,9 @@
     max-height: 100px;
     display: flex;    
     flex-wrap: wrap; 
-
-    //justify-content: space-between;
     overflow-y: overlay;   
 }
+
 .day-number{
     //width: 100%;
     display: flex;
@@ -134,6 +133,21 @@
         border-bottom-left-radius: 0;
     }
 }
+// ============================ SCROLLBAR ======================
+.bricks-container::-webkit-scrollbar{
+    width: 8px;
+} 
+.bricks-container::-webkit-scrollbar-thumb{
+    background-color:#0097a7;
+    border-radius:4px;
+    border:1px solid #464646;
+}
+.bricks-container::-webkit-scrollbar-thumb:hover{
+    background-color:#02707c;
+}
+.bricks-container::-webkit-scrollbar-thumb:active{
+    background-color:#01636e;
+} 
 
 // ======================= MEDIA =====================
 @media screen and(max-width: 930px){
