--- a/src/styles.scss
+++ b/src/styles.scss
@@ -147,9 +147,9 @@ h5 {
     width: 200px;
     background-color: black;
     color: #fff;
-    text-align: center;
+    //text-align: center;
     border-radius: 6px;
-    padding: 5px 0;
+    padding: 5px 5px;
     position: absolute;
     z-index: 1;
     // ON THE TOP 
@@ -159,7 +159,7 @@ h5 {
     
     // ON THE RIGHT
     left: 105%;
-    top: 40px;
+    //top: 40px;
     
     /* Fade in tooltip - takes 1 second to go from 0% to 100% opac: */
     opacity: 0;
