Styling for small screen

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,8 +8,9 @@
         </div>
         <div class="first-section">
                     
-            <div class="menu-on-home margin-top--20">
-                <div class="left-area-menu">
+            <div class="menu-on-home">
+                <header-menu></header-menu>
+                <!-- <div class="left-area-menu">
                     <button mat-button routerLink="/home" class="logo">
                         <mat-icon>home</mat-icon>
                         <span class="logo">Make my mind</span> 
@@ -31,7 +32,7 @@
 
                     <loging></loging>
 
-                </div>
+                </div> -->
             </div>
             <div class="first-screen">
                 <div class="left-home-continer">
