--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
 
 <div class="main-app">
-    <mat-toolbar color="primary" class="toolbar-container" *ngIf="router.url != '/home'">
-        <div class="left-area-menu">
+    <!-- <mat-toolbar color="primary"  > -->
+    <div class="menu-on-home" *ngIf="router.url != '/home'">
+        <header-menu></header-menu>
+        <!-- <div class="left-area-menu">
             <button mat-button routerLink="/home" >
                 <mat-icon>home</mat-icon>
                 <span class="logo"> Make my mind</span>
@@ -19,13 +21,9 @@
             </mat-menu>
 
             <locale-change></locale-change>
-
-            <!-- <button mat-button (click)="logout()" *ngIf="authService.CurrentUser">{{'Log out' | translate}}</button>
-            <button mat-button *ngIf="!authService.CurrentUser" routerLink="/auth">{{'Log in' | translate}}</button> -->
-
             <loging></loging>
-        </div>
-    </mat-toolbar>
+        </div> -->
+    </div>
 
 
     <div class="main-container animated-container">
