--- a/src/app/category/category-center/category-center.component.scss
+++ b/src/app/category/category-center/category-center.component.scss
@@ -181,7 +181,7 @@ $hexagon-index: 0.3;
     //padding: 10px;
     display: flex;
     flex-direction: row;
-    //flex-wrap: wrap;
+    flex-wrap: wrap;
     justify-content: space-between;
 }
 
@@ -210,6 +210,7 @@ $hexagon-index: 0.3;
     width: 400px;
     display: flex;
     flex-direction: column;
+    flex-wrap: wrap;
 }
 
 
